// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`when common extension extends an invalid identifier should have validation failures() 1`] = `"Common additions 'CommonName' does not match any declared Common in namespace EdFi."`;

exports[`when common extension extends an invalid identifier should have validation failures() 2`] = `
Object {
  "column": 9,
  "line": 11,
  "tokenText": "EdFi",
}
`;

exports[`when common extension specifies wrong namespace should have validation failures() 1`] = `"Common additions 'CommonName' does not match any declared Common in namespace Extension."`;

exports[`when common extension specifies wrong namespace should have validation failures() 2`] = `
Object {
  "column": 9,
  "line": 11,
  "tokenText": "Extension",
}
`;
